
Thanks to Christian Johansson for suggestions!

2016-01-04: v1.5.0 - Forth 2012 core standard compliant!

 * forth: made +loop work according to standard
 * forth: added support for #, $, %, char parsing.
	      e.g. #123, $d020, %1001001, 'z'
 * forth: ' now aborts if it does not find a word
 * forth: made "type" disable c64 quote mode (fixes "words")
 * forth: state ( -- flag ) changed to state ( -- addr )
 * forth: added count, >body, <#, #>, hold, sign, #, #s, >number, move,
		  accept
 * forth: removed hide, hide-to, hidden, forget, scratch, cmove, cmove>
 * forth: fixed yet another tail call elimination crash
 * forth: made while/repeat implementation conform to standard
 * forth: made word conform to standard
 * forth: made "immediate", "no-tce" non-immediate
 * forth: made sure immediate does not toggle

Thanks to polluks for suggestions!

2016-01-10: v1.5.1 - bugfix & improvements

 * bugfix: evaluate and vi F7 didn't work for multi-line buffers
 * bugfix: see did not work on the latest word
 * bugfix: e.g. 'A' was parsed as 'a'
 * bugfix: case insensitivity did not work for z/Z
 * editor: use fg to bring back editor instead of RESTORE
 * disk: added include (e.g. "include gfx" loads gfx module)
 * disk: added device ( device# -- ) to switch active device
 * disk: renamed load => included
 * forth: added marker
 * forth: made dump work in decimal mode
 * forth: made .( immediate
 * forth: removed no-tce
 * forth: bring back modules

2016-01-16: v1.5.2

 * bugfix: find now handles the empty string correctly
 * bugfix: editor didn't work correctly with big files (over $1000 bytes)
 * forth: the interpreter now prints "ok" after interpreting
 * forth: abort" now inverts the text
 * editor: open files with 'vi file' instead of 's" file" vi'
 * editor: no longer possible to join lines by shift+backspace
   in insert mode

2016-01-20: v1.5.3

 * bugfix: various fixes for evaluate/vi F7

v1.5.4

 * added require, required